--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,23 @@
 description = 'NxParser Readers/Writers for JAX-RS'
 
 
+/*
+ * Plugins
+ */
+apply plugin: 'eclipse'
+apply plugin: 'java'
+
+
+/*
+ * Repositories
+ */
+repositories {
+	mavenLocal()
+	mavenCentral()
+	maven {
+		url "https://jitpack.io"
+	}
+}
 
 
 /*
@@ -17,9 +34,10 @@ dependencies {
 	 */
 	
 	// Internal
-	compile project(':nxparser-parsers')
-	compile project(':nxparser-parsers-external-jsonld-jsonld_java')
-	compile project(':nxparser-utilities-uri')
+	//implementation 'com.github.nxparser.nxparser:nxparser:2.3.3'
+	compile group: 'org.semanticweb.yars', name: 'nxparser-parsers', version: '3.0.0-SNAPSHOT'
+	compile group: 'org.semanticweb.yars', name: 'nxparser-parsers-external-jsonld-jsonld_java', version: '3.0.0-SNAPSHOT'
+	compile group: 'org.semanticweb.yars', name: 'nxparser-utilities-uri', version: '3.0.0-SNAPSHOT'
 	
 	// External
 	compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version:'2.1'
@@ -28,4 +46,6 @@ dependencies {
 	compile group: 'org.semarglproject', name: 'semargl-rdf', version:'0.6.1'
 	
 	
+	testCompile group: 'junit', name: 'junit', version:'4.12'
+		
 }
